# desenvolvimento_com_django

./: .gitignore
mysite/: pyproject.toml
mysite/contacts/: views.py
mysite/contacts/templates/contacts/: name.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  apps.py  models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py
mysite/polls/templates/polls/: detail.html  results.html
mysite/templates/admin/: base.html
